include legacy field slug
